doc (doc/swagger): create swaggo documentation for all profile endpoint
