# internal/handler/profile.handler.go
@@ -20,6 +20,16 @@ func NewProfileHandler(pr *repository.ProfileRepository) *ProfileHandler {
 	}
 }
 
+// @Summary Mendapatkan detail profil pengguna
+// @Description Mengambil detail profil pengguna yang sedang login (berdasarkan ID dari token JWT).
+// @Tags Profile
+// @Accept json
+// @Produce json
+// @Success 200 {object} models.ResponseData{Data=models.ProfileResponse} "Detail profil berhasil diambil"
+// @Failure 401 {object} models.UnauthorizedResponse "Tidak terautentikasi (Unauthorized) - Token JWT tidak valid atau hilang"
+// @Failure 404 {object} models.NotFoundResponse "Profil pengguna tidak ditemukan"
+// @Router /profile [get]
+// @Security JWTtoken
 func (ph *ProfileHandler) GetProfile(c *gin.Context) {
 	userId, err := utils.GetUserFromCtx(c)
 	if err != nil {
@@ -65,6 +75,21 @@ func (ph *ProfileHandler) GetProfile(c *gin.Context) {
 	})
 }
 
+// @Summary Memperbarui detail profil pengguna
+// @Description Memperbarui nama lengkap, nomor telepon, email, dan/atau gambar profil pengguna yang sedang login.
+// @Tags Profile
+// @Accept multipart/form-data
+// @Produce json
+// @Param fullname formData string true "Nama lengkap pengguna"
+// @Param phone formData string true "Nomor telepon pengguna"
+// @Param email formData string false "Alamat email pengguna (opsional)"
+// @Param profile_picture formData file false "Gambar profil baru (format file)"
+// @Success 200 {object} models.Response "Profil berhasil diperbarui"
+// @Failure 400 {object} models.ErrorResponse "Permintaan tidak valid (contoh: data form binding gagal, kesalahan upload file)"
+// @Failure 401 {object} models.UnauthorizedResponse "Tidak terautentikasi (Unauthorized) - Token JWT tidak valid atau hilang"
+// @Failure 500 {object} models.InternalErrorResponse "Kesalahan server internal"
+// @Router /profile [patch]
+// @Security JWTtoken
 func (ph *ProfileHandler) UpdateProfile(c *gin.Context) {
 	userId, err := utils.GetUserFromCtx(c)
 	if err != nil {
@@ -136,6 +161,16 @@ func (ph *ProfileHandler) UpdateProfile(c *gin.Context) {
 	})
 }
 
+// @Summary Menghapus gambar profil
+// @Description Menghapus gambar profil (avatar) pengguna yang sedang login.
+// @Tags Profile
+// @Accept json
+// @Produce json
+// @Success 200 {object} models.Response "Gambar profil berhasil dihapus"
+// @Failure 401 {object} models.UnauthorizedResponse "Tidak terautentikasi (Unauthorized) - Token JWT tidak valid atau hilang"
+// @Failure 500 {object} models.InternalErrorResponse "Kesalahan server internal saat menghapus avatar"
+// @Router /profile/avatar [delete]
+// @Security JWTtoken
 func (ph *ProfileHandler) DeleteAvatar(c *gin.Context) {
 	userId, err := utils.GetUserFromCtx(c)
 	if err != nil {
